k8s/ingress-services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-client
                port:
                  number: 3001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blog-server
                port:
                  number: 3000
